fixed flexbox wrapping with media query --added background image + subtitle flexbox --added main tag with about me section --added links in navbar with pseudo classes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
     /* box-sizing: border-box; */
 }
 
+/* Header General Styling & Flexbox start */
 header {
     background-color: #AAAAAA;
     border-bottom: solid 5px #DDDDDD;
@@ -15,35 +16,42 @@ header {
     align-items: flex-start;
     justify-content: space-between;
 }
-
+/* Lo Selby Header Box Specific Styling */
 .lo {
     background-color: var(--title-background);
     width: 250px;
     font-size: 30px;
     height: 50px;
     padding: 10px;
+    flex: 1 0 auto;
    /* text-align:center; */
     /* flex: 1 1 100px; */
 }
+/* Nav Bar Styling */
 
-.nav {
-
-}
-
-.nav li {
+.nav-link {
     display: inline-block;
     gap: 10px;
     font-size: 17px;
     height: 50px;
     padding: 17px;
-    flex: 1 1 50px;
+    flex: 1 0 0;
+    flex-wrap: wrap-reverse;
     
 }
-
-.nav li:hover {
-    background-color: #95B2A7;
+/* Remove Link Decoration & Link Coloring */
+.nav-link a {
+    color: black;
+    text-decoration: none;
 }
-
+/* Pseudo Classes for Navbar Links */
+.nav-link:hover, .nav-link:focus, .nav-link:active {
+    background-color: #95B2A7;
+    cursor: pointer;
+    color: black;
+    text-decoration: none;
+}
+/* Wood Grain Background Section Image + Flexbox */
 .background {
     height: 350px;
     width: 100%;
@@ -52,11 +60,11 @@ header {
     background-size: cover;
     background-position: center;
     display:flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: flex-end;
     justify-content: flex-end;
 }
-
+/* Subtitle styling */
 .subtitle {
     background-color: var(--title-background);
     font-size: 25px;
@@ -65,11 +73,23 @@ header {
     
 }
 
+/* Media Queries! */
 @media screen and (max-width: 992px) {
 }
 
 @media screen and (max-width: 768px) {
+   
 }
 
 @media screen and (max-width: 576px) {
+    .nav {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .nav-link {
+        flex-basis: 100%;
+        text-align: center;
+        padding: 40px;
+    }
+
 }
